--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -6,11 +6,12 @@
     <string name="add_activity">Add a new activity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_create">CreateActivity</string>
-    <string name="create_activity">Create a new activity!</string>
+    <string name="create_activity">Add activity</string>
     <string name="title_activity_first_fragment">FirstFragment</string>
     <string name="title_activity_second_fragment">SecondFragment</string>
     <string name="title_activity_third_fragment">ThirdFragment</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="about">About</string>
 
 
 </resources>
