Added SQLite columns for description, location, cost and timeframe. Created detailedView for activity when clicked on its name.

--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="title_activity_third_fragment">ThirdFragment</string>
     <string name="title_activity_splash">SplashActivity</string>
     <string name="about">About</string>
-
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
