--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="title_activity_splash">SplashActivity</string>
     <string name="about">About</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_data_base_debug">DataBaseDebugActivity</string>
+        <string name="db_string">DataBaseDebug</string>
 
 </resources>
