--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="title_activity_data_base_debug">DataBaseDebugActivity</string>
     <string name="db_string">DataBaseDebug</string>
     <string name="local_db_string">LocalDataBaseDebug</string>
+    <string name="not_now">Not now</string>
+    <string name="never_again">Never again</string>
     <string name="title_activity_local_data_base_debug_activity">LocalDataBaseDebugActivity</string>
 	<string name="no_activities_to_show">No activities to show</string>
     
