no conection page

--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="never_again">Never again</string>
     <string name="title_activity_local_data_base_debug_activity">LocalDataBaseDebugActivity</string>
 	<string name="no_activities_to_show">No activities to show</string>
+	<string name="no_connection">No connection to internet</string>
+	<string name="open_internet_settings">Open internet settings</string>
     
 </resources>
