Google+ log in and log out mostly working

--- a/Prawesome/res/values/strings.xml
+++ b/Prawesome/res/values/strings.xml
@@ -18,12 +18,14 @@
     <string name="not_now">Not now</string>
     <string name="never_again">Never again</string>
     <string name="title_activity_local_data_base_debug_activity">LocalDataBaseDebugActivity</string>
-	<string name="no_activities_to_show">No activities to show</string>
-	<string name="no_connection">No connection to internet</string>
-	<string name="open_internet_settings">Open internet settings</string>
-	<string name="open_internet_wifi_settings">Open WiFi settings</string>
-	<string name="open_internet_mobile_networks_settings">Open moblie netwoks settings</string>
-	<string name="restart">Reload</string>
-	<string name="remove_not_now">Show not now activities</string>
-    
+    <string name="no_activities_to_show">No activities to show</string>
+    <string name="no_connection">No connection to internet</string>
+    <string name="open_internet_settings">Open internet settings</string>
+    <string name="open_internet_wifi_settings">Open WiFi settings</string>
+    <string name="open_internet_mobile_networks_settings">Open moblie netwoks settings</string>
+    <string name="restart">Reload</string>
+    <string name="remove_not_now">Show not now activities</string>
+    <string name="title_activity_sign_in_test">Prawesome</string>
+    <string name="logout">Sign out</string>
+
 </resources>
